changed toolbar icon; modified styles for wider text input boxes; added French strings (pending AMOS translation later on)
Signed-off-by: rezeau <joseph@rezeau.org>

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+@media (min-width: 992px) {
+  .tiny_clozergx .form-control {    
+    width: 500px!important;
+  }
+  .tiny_clozergx_col0 form-group {
+    width: 550px!important;
+  }
+}
 .tiny_clozergx img {
     cursor: pointer;
 }
@@ -40,7 +48,7 @@
 }
 
 input.tiny_clozergx_marks.form-control {
-    width: 4em;
+    width: 4em!important;
 }
 
 .tiny_clozergx_answers .form-group img {
