--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,14 @@
 @media (min-width: 992px) {
     .tiny_clozergx .form-control {
-        width: 500px !important;
+        width: 500px;
     }
     .tiny_clozergx_col0 .form-group {
-        width: 550px !important;
+        width: 550px;
     }
 }
 
 .tiny_clozergx img {
     cursor: pointer;
-}
-
-.tiny_clozergx .form-control {
-    width: unset;
 }
 
 .tiny_clozergx .error {
@@ -24,7 +20,6 @@
 }
 
 .tiny_clozergx_answers {
-    height: 375px;
     overflow-x: hidden;
 }
 
@@ -49,7 +44,7 @@
 }
 
 input.tiny_clozergx_marks.form-control {
-    width: 4em !important;
+    width: 4em;
 }
 
 .tiny_clozergx_answers .form-group img {
