--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,10 @@
     }
 }
 
-.tiny_clozergx img {
+/* Hack to make it work but should be checked! */
+.tiny_cloze img {
     cursor: pointer;
+    width: 0.8rem;
 }
 
 .tiny_clozergx .error {
