--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,7 @@
     }
 }
 
-/* Hack to make it work but should be checked! */
-.tiny_cloze img {
+.tiny_clozergx img {
     cursor: pointer;
     width: 0.8rem;
 }
